# nuts-n-bolts

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: build.yml  cmake.yml
src/: CMakeLists.txt  main.c
src/llist/: CMakeLists.txt  llist.c  llist.h
src/lnode/: CMakeLists.txt  lnode.c  lnode.h
src/sllist/: CMakeLists.txt  sllist.c  sllist.h
src/slnode/: CMakeLists.txt  slnode.c  slnode.h
src/slstack/: CMakeLists.txt  slstack.c  slstack.h
tests/: CMakeLists.txt
tests/llist_test/: CMakeLists.txt  main.cpp
tests/lnode_test/: CMakeLists.txt  main.cpp
tests/sllist_test/: CMakeLists.txt  main.cpp
tests/slnode_test/: CMakeLists.txt  main.cpp
tests/slstack_test/: CMakeLists.txt  main.cpp
tests/test_lnode/: CMakeLists.txt  main.cpp
